k8s/backend2-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend2
  namespace: blogapp
  labels:
    app: backend2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend2
  template:
    metadata:
      labels:
        app: backend2
    spec:
      containers:
      - name: blogapp-backend2
        image: duck69i/blogapp-backend2:latest
        ports:
          - name: http
            containerPort: 3001
