k8s/backend1-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: backend1
  name: backend1
  namespace: blogapp
spec:
  ports:
  - name: http
    port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: backend1
  type: ClusterIP
status:
  loadBalancer: {}
