k8s/backend2-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: backend2
  name: backend2
  namespace: blogapp
spec:
  ports:
  - name: http
    port: 3001
    protocol: TCP
    targetPort: 3001
  selector:
    app: backend2
  type: ClusterIP
status:
  loadBalancer: {}
