k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik
spec:
  ingressClassName: traefik
  rules:
  - host: 13.232.45.191
    http:
      paths:
      - backend:
          service:
            name: nginx
            port:
              number: 80
        path: /
        pathType: Exact
status:
  loadBalancer: {}
